@@ -100,7 +100,7 @@ $SIG{'INT'} = \&INT_handler;
 $SIG{'TERM'} = \&TERM_handler;
 
 # Create some variables for later use
-our (%rawcmds, %svsuid, %svsnick, %PROTO_SETTINGS, %COMMANDS, %HELP, %MODULE, %CMDTREE, %TIMER);
+our (%rawcmds, %svsuid, %svsnick, %PROTO_SETTINGS, %COMMANDS, %HELP, %MODULE, %CMDTREE, %TIMER, %FLAGS);
 
 # Load the modules
 require Server::Events;
